--- a/config/default/crd/bases/infrastructure.cluster.x-k8s.io_vsphereclusters.yaml
+++ b/config/default/crd/bases/infrastructure.cluster.x-k8s.io_vsphereclusters.yaml
@@ -519,7 +519,7 @@ spec:
               conditions:
                 description: |-
                   conditions represents the observations of a VSphereCluster's current state.
-                  Known condition types are Ready, FailureDomainsReady, VCenterAvailable, ClusterModulesReady, Paused.
+                  Known condition types are Ready, FailureDomainsReady, VCenterAvailable, ClusterModulesReady and Paused.
                 items:
                   description: Condition contains details for one aspect of the current
                     state of this API Resource.
